fix #235: input-time - align to right

--- a/src/input/input-time/InputTime.css
+++ b/src/input/input-time/InputTime.css
@@ -5,5 +5,6 @@
 
 .input-time input {
 	margin-left: calc(2rem - 2px);
-	text-align: right;
+	display: inline-flex;
+	justify-content: end;
 }
